--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="shortcut icon" href="favicon_transparent_32x32.png" />
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bellota:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
     <script type="text/javascript" src="lib/index.js"></script>
 </head>
 <body>
@@ -15,13 +20,10 @@
             <div class="logotipo">
                 <img src="/logo.png" alt="Anelim Sweets">
             </div>    
-            <div class="contato">
-                <a target="_blank" href="https://api.whatsapp.com/send?phone=5511969936243&text=Olá, gostaria de mais informações">
-                <b title="Whatsapp" style="color: green;" class="fa">&#xf232;</b></a>
-                <a target="_blank" href="https://www.instagram.com/anelim.sweets?igsh=MTFvbHg3dmJ5c2U5cg==">
-                <b title="Instagram" style="color: deeppink;" class="fa">&#xf16d;</b></a>
+            <div class="fundoMenu">
+                <img src="images/melderretendo.png">
             </div>
-            <nav class="menuNav">
+            <nav class="menuNav">                
                 <ul class="menu">
                       <li><a href="pages/confeiteira.html">Sobre a Confeiteira</a></li>
                             <li><a href="#">O que fazemos?</a>
@@ -30,14 +32,25 @@
                                     <li><a href="#">Chá Revelação</a></li>
                                     <li><a href="#">Baby Born</a></li>
                                  </ul>
-                          </li>
-                      <li><a href="#">Localização</a></li>
+                          </li>                       
+                      <li><a>Contato</a>
+                        <ul>
+                            <li>
+                                <a target="_blank" href="https://api.whatsapp.com/send?phone=5511969936243&text=Olá, gostaria de mais informações">
+                                <b title="Whatsapp" style="color: green;" class="fa">&#xf232; Whatsapp</b></a>
+                            </li>
+                            <li>
+                                <a target="_blank" href="https://www.instagram.com/anelim.sweets?igsh=MTFvbHg3dmJ5c2U5cg==">
+                                <b title="Instagram" style="color: deeppink;" class="fa">&#xf16d; Instagram</b></a>
+                            </li>
+                        </ul>
+                    </li>
               </ul>
-              </nav>
+            </nav>
     </div>     
     <div class="content">
-        <section class="imgContent">
-            <div>
+        <section>
+            <!-- <div>
                 <img id="1" src="images/pavlova.png" title="Pavlova"><br/>
                 <span>PavLova</span>
             </div>
@@ -64,6 +77,20 @@
             <div>
                 <img id="7" src="images/crepe.png" title="Crepe"><br/>
                 <span>Crepe</span>
+            </div> -->
+            <div>
+                <p>A confeitaria desempenha um papel significativo na vida das pessoas, 
+                muito além de simples sobremesas. Desde momentos de celebração, 
+                como aniversários e casamentos, até o conforto em dias difíceis, 
+                as delícias feitas com açúcar e farinha têm o poder de unir pessoas e criar memórias afetivas. 
+                Os aromas que saem de uma cozinha de confeitaria podem evocar lembranças nostálgicas, 
+                enquanto a arte de decorar bolos e doces transforma essas iguarias em verdadeiras obras-primas. 
+                Assim, a confeitaria não é apenas uma profissão, mas uma forma de expressão e carinho, 
+                capaz de tocar o coração de quem saboreia suas criações. Neste contexto, 
+                a Anelim Sweets trás a esse universo doce epserandor impacta emocionalmente a vida das pessoas, criando laços, 
+                trazendo alegria e celebrando a simplicidade dos momentos cotidianos.<br>                
+            </p>
+              <span>Seja Bem Vindo!</span>
             </div>
         </section>
     </div> 
