--- a/pages/confeiteira.html
+++ b/pages/confeiteira.html
@@ -5,67 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anelim Sweets - O mundo da confeitaria</title>
     <link rel="shortcut icon" href="favicon_transparent_32x32.png" />
-    <link rel="stylesheet" type="text/css" href="../css/index.css">
-    <script type="text/javascript" src="../lib/index.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/confeiteira.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bellota:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Bellota:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-    <div class="header">
+        <div class="header">
             <div class="logotipo">
-                <img src="/logo.png" alt="Anelim Sweets">
+                <img src="../logo.png" alt="Anelim Sweets">
             </div>
             <div class="fundoMenu">
                 <img src="../images/melderretendo.png">
-            </div>            
-            <nav class="menuNavConfe">
-                <ul class="menuConfe">
-                      <li><a href="../index.html">Home</a></li>                     
-                            <li><a href="#">O que fazemos?</a>
-                               <ul>
-                                    <li><a href="#">Aniversários</a></li>
-                                    <li><a href="#">Chá Revelação</a></li>
-                                    <li><a href="#">Baby Born</a></li>
-                                 </ul>
-                          </li>
-                          <li><a>Contato</a>
-                            <ul>
-                                <li>
-                                    <a target="_blank" href="https://api.whatsapp.com/send?phone=5511969936243&text=Olá, gostaria de mais informações">
-                                    <b title="Whatsapp" style="color: green;" class="fa">&#xf232; Whatsapp</b></a>
-                                </li>
-                                <li>
-                                    <a target="_blank" href="https://www.instagram.com/anelim.sweets?igsh=MTFvbHg3dmJ5c2U5cg==">
-                                    <b title="Instagram" style="color: deeppink;" class="fa">&#xf16d; Instagram</b></a>
-                                </li>
-                            </ul>
-                        </li>
-              </ul>
-              </nav>
-    </div>     
-    <div>
-        <section>        
-            <div class="confeiteira">
-                <p>Como confeiteira, minha jornada é uma deliciosa mistura de arte, ciência e paixão. Todos os dias, entro na cozinha com um objetivo: transformar ingredientes simples em obras-primas que trazem sorrisos e despertam memórias. A confeitaria é um universo de sabores, texturas e cores, e cada criação é uma oportunidade de expressar minha criatividade.
-
-                    Desde a escolha dos ingredientes frescos até a elaboração de receitas, cada passo é uma dança cuidadosa. A precisão é fundamental; uma pitada a mais de açúcar ou um grau a mais no forno pode fazer toda a diferença. Mas, além da técnica, a emoção está sempre presente. A satisfação de ver alguém se deliciar com um bolo que eu preparei é indescritível.
-                    
-                    Os desafios também fazem parte da profissão. A pressão de prazos apertados e a busca pela perfeição em cada detalhe exigem dedicação e resiliência. No entanto, cada conquista, cada elogio e cada momento compartilhado à mesa tornam tudo isso gratificante.
-                    
-                    Ser confeiteira é, acima de tudo, uma forma de levar alegria às pessoas. É uma arte que se manifesta em cada fatia de bolo, em cada doce delicadamente decorado, e eu sou privilegiada por poder fazer parte desses momentos especiais na vida de tantos.</p>
-                <img src="../images/confeiteira.png" title="Confeiteira"><br/>                
-            </div>         
-        </section>
-    </div> 
+            </div>
+            <nav class="menuNav">                
+                <ul class="menu">
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="#">O que fazemos?</a>
+                        <ul>
+                            <li><a href="#">Aniversários</a></li>
+                            <li><a href="#">Chá Revelação</a></li>
+                            <li><a href="#">Baby Born</a></li>
+                        </ul>
+                    </li>
+                    <li><a>Contato</a>
+                        <ul>
+                            <li>
+                                <a target="_blank" href="https://api.whatsapp.com/send?phone=5511969936243&text=Olá, gostaria de mais informações">
+                                    <b title="Whatsapp" style="color: green;" class="fa">&#xf232; Wpp</b>
+                                </a>
+                            </li>
+                            <li>
+                                <a target="_blank" href="https://www.instagram.com/anelim.sweets?igsh=MTFvbHg3dmJ5c2U5cg==">
+                                    <b title="Instagram" style="color: deeppink;" class="fa">&#xf16d; Insta</b>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </div>     
+        <div class="content">
+            <section>
+                <p>
+                    Como confeiteira, minha jornada é uma deliciosa mistura de arte, ciência e paixão. Todos os dias, entro na cozinha com um objetivo: transformar ingredientes simples em obras-primas que trazem sorrisos e despertam memórias. A confeitaria é um universo de sabores, texturas e cores, e cada criação é uma oportunidade de expressar minha criatividade. Desde a escolha dos ingredientes frescos até a elaboração de receitas, cada passo é uma dança cuidadosa. A precisão é fundamental; uma pitada a mais de açúcar ou um grau a mais no forno pode fazer toda a diferença. Mas, além da técnica, a emoção está sempre presente. A satisfação de ver alguém se deliciar com um bolo que eu preparei é indescritível. Os desafios também fazem parte da profissão. A pressão de prazos apertados e a busca pela perfeição em cada detalhe exigem dedicação e resiliência. No entanto, cada conquista, cada elogio e cada momento compartilhado à mesa tornam tudo isso gratificante. Ser confeiteira é, acima de tudo, uma forma de levar alegria às pessoas. É uma arte que se manifesta em cada fatia de bolo, em cada doce delicadamente decorado, e eu sou privilegiada por poder fazer parte desses momentos especiais na vida de tantos.
+                </p>
+                <img src="../images/confeiteira.png" title="Milena Ferreira" class="confeiteira-img">
+            </section>
+        </div>
+    </div>
     <footer>
         <section class="anelim">
-        ©2024 Anelim Sweets - O mundo da confeitaria
+            ©2024 Anelim Sweets - O mundo da confeitaria
         </section>
     </footer>
-</div>
 </body>
 </html>
