--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="lib/index.js"></script>
 </head>
 <body>
+    <div class="overlay"></div>
     <div class="container">
     <div class="header">
             <div class="logotipo">
@@ -25,7 +26,7 @@
             </div>
             <nav class="menuNav">                
                 <ul class="menu">
-                      <li><a href="pages/confeiteira.html">Sobre a Confeiteira</a></li>
+                      <li><a href="pages/confeiteira.html">A Confeiteira</a></li>
                             <li><a href="#">O que fazemos?</a>
                                <ul>
                                     <li><a href="#">Aniversários</a></li>
@@ -37,11 +38,11 @@
                         <ul>
                             <li>
                                 <a target="_blank" href="https://api.whatsapp.com/send?phone=5511969936243&text=Olá, gostaria de mais informações">
-                                <b title="Whatsapp" style="color: green;" class="fa">&#xf232; Whatsapp</b></a>
+                                <b title="Whatsapp" style="color: green;" class="fa">&#xf232; Wpp</b></a>
                             </li>
                             <li>
                                 <a target="_blank" href="https://www.instagram.com/anelim.sweets?igsh=MTFvbHg3dmJ5c2U5cg==">
-                                <b title="Instagram" style="color: deeppink;" class="fa">&#xf16d; Instagram</b></a>
+                                <b title="Instagram" style="color: deeppink;" class="fa">&#xf16d; Insta</b></a>
                             </li>
                         </ul>
                     </li>
@@ -50,50 +51,15 @@
     </div>     
     <div class="content">
         <section>
-            <!-- <div>
-                <img id="1" src="images/pavlova.png" title="Pavlova"><br/>
-                <span>PavLova</span>
-            </div>
-            <div>
-                <img id="2" src="images/pudim.png" title="Pudim"><br/>
-                <span>Pudim</span>
-            </div>
-            <div>
-                <img id="3" src="images/Brownie.png" title="Brownie"><br/>
-                <span>Brownie</span>
-            </div>
-            <div>
-                <img id="4" src="images/bolotresleites.png" title="Bolo três leites"><br/>
-                <span>Bolo três leites</span>
-            </div>
-            <div>
-                <img id="5" src="images/RedVelvet.png" title="RedVelvet"><br/>
-                <span>RedVelvet</span>
-            </div>
-            <div>
-                <img id="6" src="images/charevelacao.png" title="Chá Revelação"><br/>
-                <span>Docinhos Chá Revelação</span>
-            </div>
-            <div>
-                <img id="7" src="images/crepe.png" title="Crepe"><br/>
-                <span>Crepe</span>
-            </div> -->
-            <div>
-                <p>A confeitaria desempenha um papel significativo na vida das pessoas, 
-                muito além de simples sobremesas. Desde momentos de celebração, 
-                como aniversários e casamentos, até o conforto em dias difíceis, 
-                as delícias feitas com açúcar e farinha têm o poder de unir pessoas e criar memórias afetivas. 
-                Os aromas que saem de uma cozinha de confeitaria podem evocar lembranças nostálgicas, 
-                enquanto a arte de decorar bolos e doces transforma essas iguarias em verdadeiras obras-primas. 
-                Assim, a confeitaria não é apenas uma profissão, mas uma forma de expressão e carinho, 
-                capaz de tocar o coração de quem saboreia suas criações. Neste contexto, 
-                a Anelim Sweets trás a esse universo doce epserandor impacta emocionalmente a vida das pessoas, criando laços, 
-                trazendo alegria e celebrando a simplicidade dos momentos cotidianos.<br>                
-            </p>
-              <span>Seja Bem Vindo!</span>
-            </div>
-        </section>
-    </div> 
+            <div class="carousel">
+                <div class="imagesIni">
+                    <img id="1" src="images/pavlova.png" title="Pavlova">
+                    <img id="2" src="images/pudim.png" title="Pudim">
+                    <img id="4" src="images/bolotresleites.png" title="Bolo três leites">
+                    <img id="5" src="images/RedVelvet.png" title="RedVelvet">
+                    <img id="7" src="images/crepe.png" title="Crepe">
+                </div>               
+              </div>            
     <footer>
         <section class="anelim">
         ©2024 Anelim Sweets - O mundo da confeitaria
