--- a/pages/confeiteira.html
+++ b/pages/confeiteira.html
@@ -15,7 +15,8 @@
     <div class="container">
         <div class="header">
             <div class="logotipo">
-                <img src="../logo.png" alt="Anelim Sweets">
+                <a href="../index.html">
+                <img src="../logo.png" alt="Anelim Sweets"></a>
             </div>
             <div class="fundoMenu">
                 <img src="../images/melderretendo.png">
