--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
     <div class="container">
         <div class="header">
             <div class="logotipo">
+                <a href="index.html">
                 <img src="/logo.png" alt="Anelim Sweets">
+            </a>
             </div>
             <div class="fundoMenu">
                 <img src="images/melderretendo.png" alt="Imagem de fundo do menu">
             </div>
-            <div class="menuToggle">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-            </div>
+            <div class="menuToggle">&equiv;</div>
             <nav class="menuNav">
                 <ul class="menu">
                     <li><a href="pages/confeiteira.html">A Confeiteira</a></li>
@@ -56,12 +54,12 @@
         <div class="content" id="content">
             <section>
                 <div class="carousel">
-                    <div class="imagesIni">
-                        <img id="1" src="images/pavlova.png" title="Pavlova">
+                    <div class="imagesIni">                        
                         <img id="2" src="images/pudim.png" title="Pudim">
                         <img id="4" src="images/bolotresleites.png" title="Bolo três leites">
                         <img id="5" src="images/RedVelvet.png" title="Red Velvet">
                         <img id="7" src="images/crepe.png" title="Crepe">
+                        <img id="1" src="images/pavlova.png" title="Pavlova">
                     </div>
                 </div>
             </section>
