--- a/pages/confeiteira.html
+++ b/pages/confeiteira.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anelim Sweets - O mundo da confeitaria</title>
-    <link rel="shortcut icon" href="favicon_transparent_32x32.png" />
+    <link rel="shortcut icon" href="../favicon.ico" />
     <link rel="stylesheet" type="text/css" href="../css/confeiteira.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
             <div class="fundoMenu">
                 <img src="../images/melderretendo.png">
             </div>
-            <div class="menuToggle">
+            <div class="menuToggle" aria-expanded="false">
                 <div class="bar"></div>
                 <div class="bar"></div>
                 <div class="bar"></div>
