--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                         <ul>
                             <li>
                                 <a target="_blank" href="https://api.whatsapp.com/send?phone=5511969936243&text=Olá, gostaria de mais informações">
-                                    <b title="Whatsapp" style="color: green;" class="fa">&#xf232; Wpp</b>
+                                    <b title="Whatsapp" style="color: black;" class="fa">&#xf232;</b>
                                 </a>
                             </li>
                             <li>
                                 <a target="_blank" href="https://www.instagram.com/anelim.sweets?igsh=MTFvbHg3dmJ5c2U5cg==">
-                                    <b title="Instagram" style="color: deeppink;" class="fa">&#xf16d; Insta</b>
+                                    <b title="Instagram" style="color: black;" class="fa">&#xf16d;</b>
                                 </a>
                             </li>
                         </ul>
@@ -58,10 +58,10 @@
         <div class="content" id="content">
             <section>
                 <div class="carousel">
-                    <div class="imagesIni">                        
-                        <img id="2" src="images/pudim.png" title="Pudim">
+                    <div class="imagesIni">                                                
                         <img id="4" src="images/bolotresleites.png" title="Bolo três leites">
                         <img id="5" src="images/RedVelvet.png" title="Red Velvet">
+                        <img id="2" src="images/pudim.png" title="Pudim">
                         <img id="7" src="images/crepe.png" title="Crepe">
                         <img id="1" src="images/pavlova.png" title="Pavlova">
                     </div>
@@ -72,6 +72,15 @@
         <footer>
             <section class="anelim">
                 ©2024 Anelim Sweets - O mundo da confeitaria
+                <section class="footerContato">
+                    <a target="_blank" href="https://api.whatsapp.com/send?phone=5511969936243&text=Olá, gostaria de mais informações">
+                        <b title="Whatsapp" style="color: black;" class="fa">&#xf232;</b>
+                    </a>
+                    
+                    <a target="_blank" href="https://www.instagram.com/anelim.sweets?igsh=MTFvbHg3dmJ5c2U5cg==">
+                        <b title="Instagram" style="color: black;" class="fa">&#xf16d;</b>
+                    </a>    
+                </section>     
             </section>
         </footer>
     </div>
