--- a/pages/confeiteira.html
+++ b/pages/confeiteira.html
@@ -35,12 +35,12 @@
                         <ul>
                             <li>
                                 <a target="_blank" href="https://api.whatsapp.com/send?phone=5511969936243&text=Olá, gostaria de mais informações">
-                                    <b title="Whatsapp" style="color: green;" class="fa">&#xf232; Wpp</b>
+                                    <b title="Whatsapp" style="color: black;" class="fa">&#xf232;</b>
                                 </a>
                             </li>
                             <li>
                                 <a target="_blank" href="https://www.instagram.com/anelim.sweets?igsh=MTFvbHg3dmJ5c2U5cg==">
-                                    <b title="Instagram" style="color: deeppink;" class="fa">&#xf16d; Insta</b>
+                                    <b title="Instagram" style="color: black;" class="fa">&#xf16d;</b>
                                 </a>
                             </li>
                         </ul>
@@ -59,8 +59,17 @@
     </div>
     <footer>
         <section class="anelim">
-            ©2024 Anelim Sweets - O mundo da confeitaria
-        </section>
+            ©2024 Anelim Sweets - O mundo da confeitaria   
+            <section class="footerContato">
+                <a target="_blank" href="https://api.whatsapp.com/send?phone=5511969936243&text=Olá, gostaria de mais informações">
+                    <b title="Whatsapp" style="color: black;" class="fa">&#xf232;</b>
+                </a>
+                
+                <a target="_blank" href="https://www.instagram.com/anelim.sweets?igsh=MTFvbHg3dmJ5c2U5cg==">
+                    <b title="Instagram" style="color: black;" class="fa">&#xf16d;</b>
+                </a>    
+            </section>         
+        </section>        
     </footer>
     <script src="../lib/index.js" defer></script>
 </body>
