--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anelim Sweets - O mundo da confeitaria</title>
     <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,22 +14,23 @@
     
 </head>
 <body>
-    <div class="overlay"></div>
     <div class="container">
         <div class="header">
             <div class="logotipo">
                 <a href="index.html">
-                <img src="/logo.png" alt="Anelim Sweets">
-            </a>
+                    <img src="/logo.png" alt="Anelim Sweets">
+                </a>
             </div>
             <div class="fundoMenu">
                 <img src="images/melderretendo.png" alt="Imagem de fundo do menu">
             </div>
-            <div class="menuToggle" aria-expanded="false">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-            </div>
+            <div id="fToggle">
+                <div class="menuToggle" aria-expanded="false">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </div>
+            </div>            
             <nav class="menuNav">
                 <ul class="menu">
                     <li><a href="pages/confeiteira.html">A Confeiteira</a></li>
