--- a/pages/confeiteira.html
+++ b/pages/confeiteira.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anelim Sweets - O mundo da confeitaria</title>
     <link rel="shortcut icon" href="../favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="../css/confeiteira.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,17 +15,18 @@
     <div class="container">
         <div class="header">
             <div class="logotipo">
-                <a href="../index.html">
-                <img src="../logo.png" alt="Anelim Sweets"></a>
+                <a href="../index.html"><img src="../logo.png" alt="Anelim Sweets"></a>
             </div>
             <div class="fundoMenu">
                 <img src="../images/melderretendo.png">
             </div>
-            <div class="menuToggle" aria-expanded="false">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-            </div>
+            <div id="fToggle">
+                <div class="menuToggle" aria-expanded="false">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </div>
+            </div>     
             <nav class="menuNav">                
                 <ul class="menu">
                     <li><a href="../index.html">Home</a></li>
@@ -48,7 +49,7 @@
                 </ul>
             </nav>
         </div>     
-        <div class="content" id="content">
+        <div class="contentC" id="content">
             <section>
                 <p>
                     Como confeiteira, minha jornada é uma deliciosa mistura de arte, ciência e paixão. Todos os dias, entro na cozinha com um objetivo: transformar ingredientes simples em obras-primas que trazem sorrisos e despertam memórias. A confeitaria é um universo de sabores, texturas e cores, e cada criação é uma oportunidade de expressar minha criatividade. Desde a escolha dos ingredientes frescos até a elaboração de receitas, cada passo é uma dança cuidadosa. A precisão é fundamental; uma pitada a mais de açúcar ou um grau a mais no forno pode fazer toda a diferença. Mas, além da técnica, a emoção está sempre presente. A satisfação de ver alguém se deliciar com um bolo que eu preparei é indescritível. Os desafios também fazem parte da profissão. A pressão de prazos apertados e a busca pela perfeição em cada detalhe exigem dedicação e resiliência. No entanto, cada conquista, cada elogio e cada momento compartilhado à mesa tornam tudo isso gratificante. Ser confeiteira é, acima de tudo, uma forma de levar alegria às pessoas. É uma arte que se manifesta em cada fatia de bolo, em cada doce delicadamente decorado, e eu sou privilegiada por poder fazer parte desses momentos especiais na vida de tantos.
