politica de cookies

--- a/index.html
+++ b/index.html
@@ -54,9 +54,13 @@
                     </li>
                 </ul>
             </nav>
-        </div>
-        
+        </div>        
         <div class="content" id="content">
+            <!-- Banner de Cookies -->
+            <div id="cookie-banner">
+                <p>Este site utiliza cookies para melhorar a sua experiência. Ao continuar navegando, você concorda com o uso de cookies.</p>
+                <button id="accept-cookies">Aceitar</button>
+            </div>
             <section>
                 <div class="carousel">
                     <div class="imagesIni">                                                
