--- a/pages/confeiteira.html
+++ b/pages/confeiteira.html
@@ -50,6 +50,11 @@
             </nav>
         </div>     
         <div class="contentC" id="content">
+             <!-- Banner de Cookies -->
+             <div id="cookie-banner">
+                <p>Este site utiliza cookies para melhorar a sua experiência. Ao continuar navegando, você concorda com o uso de cookies.</p>
+                <button id="accept-cookies">Aceitar</button>
+            </div>
             <section>
                 <p>
                     Como confeiteira, minha jornada é uma deliciosa mistura de arte, ciência e paixão. Todos os dias, entro na cozinha com um objetivo: transformar ingredientes simples em obras-primas que trazem sorrisos e despertam memórias. A confeitaria é um universo de sabores, texturas e cores, e cada criação é uma oportunidade de expressar minha criatividade. Desde a escolha dos ingredientes frescos até a elaboração de receitas, cada passo é uma dança cuidadosa. A precisão é fundamental; uma pitada a mais de açúcar ou um grau a mais no forno pode fazer toda a diferença. Mas, além da técnica, a emoção está sempre presente. A satisfação de ver alguém se deliciar com um bolo que eu preparei é indescritível. Os desafios também fazem parte da profissão. A pressão de prazos apertados e a busca pela perfeição em cada detalhe exigem dedicação e resiliência. No entanto, cada conquista, cada elogio e cada momento compartilhado à mesa tornam tudo isso gratificante. Ser confeiteira é, acima de tudo, uma forma de levar alegria às pessoas. É uma arte que se manifesta em cada fatia de bolo, em cada doce delicadamente decorado, e eu sou privilegiada por poder fazer parte desses momentos especiais na vida de tantos.
