--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="logotipo">
-                <a href="index.html">
-                    <img src="/logo.png" alt="Anelim Sweets">
-                </a>
-            </div>
+            <!-- <div class="logotipo"> -->
+                <a href="index.html" class="logotipo" style="z-index: 99;">
+                <img src="/logo.png" alt="Anelim Sweets"></img></a>
+            <!-- </div> -->
             <div class="fundoMenu">
                 <img src="images/melderretendo.png" alt="Imagem de fundo do menu">
             </div>
@@ -38,19 +37,7 @@
                         <a href="#">O que fazemos?</a>
                     </li>
                     <li>
-                        <a href="#">Contato</a>
-                        <ul>
-                            <li>
-                                <a target="_blank" href="https://api.whatsapp.com/send?phone=5511969936243&text=Olá, gostaria de mais informações">
-                                    <b title="Whatsapp" style="color: black;" class="fa">&#xf232;</b>
-                                </a>
-                            </li>
-                            <li>
-                                <a target="_blank" href="https://www.instagram.com/anelim.sweets?igsh=MTFvbHg3dmJ5c2U5cg==">
-                                    <b title="Instagram" style="color: black;" class="fa">&#xf16d;</b>
-                                </a>
-                            </li>
-                        </ul>
+                        <a href="pages/contato.html">Contato</a>                        
                     </li>
                 </ul>
             </nav>
